# Fusion

./: README.md
CSharp/: README.md
CSharp/Examples/Simple/: Program.cs  SimpleExample.csproj
CSharp/NativeApi/: .gitignore  Api.c  CMakeLists.txt  README.md  build.cmd
CSharp/NativeBridge/: Ahrs.cs  ImuFusion.csproj  Math.cs  NativeApi.cs  Offset.cs
Examples/Advanced/: main.c
Fusion/: FusionAhrs.c  FusionAhrs.h  FusionCompass.c
Python/: simple_example2.py
Python/Python-C-API/: Compass.h  Settings.h
